--- a/rndis/src/main/AndroidManifest.xml
+++ b/rndis/src/main/AndroidManifest.xml
@@ -2,11 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dsblue.rndisconfig.rndis" >
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <service android:name=".WatchForDevices" />
+
+        <receiver android:name="com.dsblue.rndisconfig.rndis.BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
         <activity
             android:name=".RNDIS"
             android:label="@string/app_name" >
